# file_backed

./: Cargo.toml  README.md
examples/: persistence.rs  simple_usage.rs
src/: backing_store.rs  convenience.rs  entries.rs  fbstore.rs  lib.rs
tests/: test.rs
