[package]
name = "file_backed"
version = "0.2.2"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/file_backed"
repository = "https://github.com/dspyz-matician/file_backed"
description = "Provides types for managing collections of large objects, using an in-memory LRU cache backed by persistent storage (typically the filesystem)."

[dependencies]
consume_on_drop = "0.1.1"
cutoff_list = "0.1.0"
dashmap = "6.1.0"
get_mut_drop_weak = "0.1.1"
log = "0.4.27"
parking_lot = "0.12.3"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
uuid = { version = "1.16.0", features = ["v4"] }

anyhow = { version = "1.0.98", optional = true }
nix = { version = "0.29.0", features = ["fs"], optional = true }
walkdir = { version = "2.5.0", optional = true }

bincode = { version = "2.0.1", features = ["serde"], optional = true }
serde = { version = "1.0.219", optional = true }

prost = { version = "0.13.5", optional = true }

[features]
fbstore = ["dep:anyhow", "dep:nix", "dep:walkdir", "tokio/fs"]
bincodec = ["fbstore", "dep:bincode", "dep:serde"]
prostcodec = ["fbstore", "dep:prost"]

[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.44.2", features = ["time"] }

[[example]]
name = "simple_usage"
required-features = ["bincodec"]

[[example]]
name = "persistence"
required-features = ["bincodec"]
